# devops_kubernetes

./: .gitignore  README.md  cluster-resourcequotas.yaml  cluster_config.md  delete_cluster.md  testing-checklist.md
.github/workflows/: build-dwk-app1.yaml  build-log-output.yaml  build-the-project-main.yaml  build-the-project-prod.yaml  build-the-project-staging.yaml  docker-hub-push.yaml  docker-image.yaml  docker-image.yml  gke-cleanup.yaml  gke-deploy.yaml  gke-example.yaml
archived-apps/log-output-v1/: package-lock.json  package.json
debug-shell/: Dockerfile  deployment.yaml
debug/debug-shell/: deployment.yaml
debug/grafana/: grafana-deployment.yaml  grafana-ingress.yaml  grafana-secret.yaml  grafana-service.yaml
examples/gke-part/: delete_cluster.md
examples/hashgenerator-app/: hashgenerator-dep.yaml
istio-samples/addons/: prometheus.yaml
log-output/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  index.js  kustomization.yaml  package-lock.json  package.json
log-output/archived-manifests/: ingress.yaml  (+2 more)
log_output/: Dockerfile  package.json
logoutputApp/: index.js  package-lock.json
pingpong-app/: README.md  index.js
pylogoutputapp/: .dockerignore  Dockerfile  README.md  justfile  main.py  pyproject.toml
pylogoutputapp/.github/workflows/: docker-publish.yml
pylogoutputapp/manifests/: deployment.yaml
screenshots/: 5.8-main.md
the-project/: README.md  docker-compose.yaml  kustomization.yaml
todo-app/: Dockerfile  README.md  docker-compose.yaml  index.html  index.js  package-lock.json  package.json  server.js
(+140 files in other folders)
