[project]
name = "pylogoutputapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "just>=0.8.165",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]
